Fixed problem with invisible label for WooCommerce

--- a/style.css
+++ b/style.css
@@ -560,6 +560,13 @@ li.recentcomments {
 .woocommerce #infinite-handle {
     display: none;
 }
+.woocommerce div.product form.cart .variations label {
+  color: #6B6B6B;
+  font-size: 14px;
+  margin-bottom: 0;
+  margin-top: 8px;
+}
+
 /* =Custom Styles
 ----------------------------------------------- */
 .site-branding {
